[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["hakkajoe <joelhakkarainen95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
cowsay = "^6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
